...

    DisposableEffect(controller) {
        val player = controller
        if (player == null) {
            onDispose {}
        } else {
            val listener = object : Player.Listener {
                override fun onEvents(player: Player, events: Player.Events) {
                    updatePlaybackSnapshot()
                }
            }
            player.addListener(listener)
            onDispose { player.removeListener(listener) }
...
